--- a/package.json
+++ b/package.json
@@ -24,6 +24,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "express-validator": "^7.0.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "helmet": "^8.0.0",
+    "hpp": "^0.2.3",
+    "xss": "^1.0.15",
+    "validator": "^13.12.0",
+    "express-slow-down": "^2.0.3",
     "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.0",
