--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "Controller.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test-deployment.js",
+    "test-deploy": "node test-deployment.js",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "generate-sitemap": "node generate-sitemap.js"
@@ -24,15 +25,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "express-rate-limit": "^7.5.0",
-    "express-validator": "^7.0.1",
     "express-mongo-sanitize": "^2.2.0",
-    "helmet": "^8.0.0",
-    "hpp": "^0.2.3",
-    "xss": "^1.0.15",
-    "validator": "^13.12.0",
-    "express-slow-down": "^2.0.3",
+    "express-rate-limit": "^7.5.1",
+    "express-slow-down": "^2.1.0",
+    "express-validator": "^7.2.1",
     "googleapis": "^148.0.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.0",
     "mongoose": "^8.12.1",
@@ -40,6 +39,8 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.16.0",
-    "puppeteer": "^24.8.0"
+    "puppeteer": "^24.8.0",
+    "validator": "^13.15.15",
+    "xss": "^1.0.15"
   }
 }
