--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "node test-deployment.js",
     "test-deploy": "node test-deployment.js",
+    "test-rate-limit": "node test-rate-limiting.js",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "generate-sitemap": "node generate-sitemap.js"
